--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -252,7 +252,7 @@ body.--dark {
       .logo {
         -webkit-text-stroke: 1px v.$white;
 
-        &:hover {
+        &::before {
           color: v.$white;
         }
       }
